添加静态资源路径

--- a/pom.xml
+++ b/pom.xml
@@ -137,6 +137,9 @@
             <resource>
                 <directory>src/main/resources/${env}</directory>
             </resource>
+            <resource>
+                <directory>src/main/webapp/*</directory>
+            </resource>
         </resources>
         <plugins>
             <plugin>
