修改打war包后接口访问路径问题

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 server.port=8080
 spring.application.name=@war-name@
-server.servlet-path=/@war-name@
+server.context-path=/@war-name@
 server.tomcat.uri-encoding=utf-8
 spring.profiles.active=@env@
 
